--- a/app/src/less/layout.less
+++ b/app/src/less/layout.less
@@ -58,7 +58,7 @@
     overflow: hidden;
     position: fixed;
     // padding-top: 52px;
-    padding-bottom: 180px;
+    // padding-bottom: 180px;
 
     &:after {
       content: "";
