--- a/app/src/js/app/components/reports/views/report.trello-task.modal.html
+++ b/app/src/js/app/components/reports/views/report.trello-task.modal.html
@@ -3,7 +3,7 @@
     <div class="lexart-modal__header">
         <h1 class="lexart-modal__title">{{ 'reports.title' | translate }}</h1>
         <a class="lexart-modal__close-btn" ng-click="closeThisDialog()">
-            <i class="lexart-icon lexart-icon--close-modal"></i>
+            <i class="ri-close-line"></i>
         </a>
     </div>
 
