--- a/app/src/js/app/shared/views/topbar.html
+++ b/app/src/js/app/shared/views/topbar.html
@@ -93,7 +93,7 @@
       <div class="top-bar__logo">
         <img src="../assets/logo/lextracking-logo.svg" alt="">
       </div>
-      <div class="navbar_btn_container">
+      <div class="">
         <button class="lexart-btn collapse-btn" ng-init="collapseSideBar = true" ng-click="hideItems();">
           <i class="ri-menu-line"></i>
           <!-- <i ng-if="!thisHide" class="ri-arrow-left-s-line"></i>
@@ -153,16 +153,27 @@
             <a class="dropdown-toggler" data-dropdown="profile">
               {{userName}} <i class="fa fa-angle-down"></i>
             </a>
+            
             <ul class="dropdown" id="profile">
               <li><a ng-click="logout()">Cerrar Sesión</a></li>
-              <li>
+              <!-- <li>
                 <button ng-if="darkMode == 0" class="lexart-btn switch_mode-btn" ng-click="toggleMode()">
                     <i class="ri-moon-line"></i>
                 </button>
                 <button ng-if="darkMode == 1" class="lexart-btn switch_mode-btn" ng-click="toggleMode()">
                     <i class="ri-sun-line"></i>
                 </button>
-              </li>
+              </li> -->
+              <!-- <li>
+                <div class="switch-wrapper">
+                    <input type="checkbox" id="check" class="toggle">
+                        <label for="check" class="label">
+                            <i class="ri-sun-line sun"></i>
+                            <i class="ri-moon-line"></i>
+                            <div class="circle"></div>
+                    </label>
+                </div>
+              </li> -->
               <!-- <li><a href="#">Some another category</a></li>
               <li class="separator"></li>
               <li><a href="#">Seprated link</a></li>
