--- a/app/src/less/components/modal.less
+++ b/app/src/less/components/modal.less
@@ -1,15 +1,18 @@
 .ngdialog-overlay,
-.lexart-modal-backdrop {
+.imm-modal-backdrop {
   position: fixed;
-  margin-left: @navbar-width;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   z-index: 100;
-  height:100%;
-  width:100%;
-  background: rgba(255,255,255,.8);
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  background-clip: padding-box;
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.1);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(2px);
 }
 
 .ngdialog-content,
@@ -17,7 +20,7 @@
   position: fixed;
   top: 0;
   bottom: 0;
-  left: 100px;
+  left: auto;
   padding: 30px 0;
   height: 100%;
   width: 100%;
