--- a/app/src/less/redesign.less
+++ b/app/src/less/redesign.less
@@ -1103,7 +1103,31 @@ tbody {
 .tooltip-container {
   position: relative;
 }
-
+.tooltip-box-switch{
+  position: absolute;
+  left: -40px;
+  bottom: 40px;
+  background-color: #7076FE;
+  color: #F9F9F9;
+  z-index: 999;
+  text-align: center;
+  font-size: 1rem;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: all 1s ease;
+  z-index: 99999;
+  width: 300%;
+}
+.tooltip-box-switch::after {
+  content: '';
+  display: block;
+  border-top: 7px solid #7076FE;
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  position: absolute;
+  top: 64px;
+  left: calc(40%);
+}
 .tooltip-box {
   position: absolute;
   left: 250px;
