[PL-111] move catalogs menu to floating menu

--- a/app/src/less/redesign.less
+++ b/app/src/less/redesign.less
@@ -150,6 +150,7 @@ tbody {
 
   .lexart-menu__nav-item {
     color: @color-dark-mode;
+    cursor: pointer;
   }
 
   .lexart-menu__nav-item:hover {
@@ -779,8 +780,17 @@ tbody {
   .sun{
     color: @color-dark-mode;;
   }
-
-
+  .lexart-hover_menu{
+    background-color: @color-bk-dark-mode-secondary;
+  }
+  .lexart-hover_menu-item{
+    padding: 10px 20px 10px 10px;
+    background-color: @color-bk-dark-mode-secondary;
+    color: @color-dark-white;
+  }
+  .lexart-hover_menu-item:hover{
+    color: @color-active-text;
+  }
 }
 
 .project-subtotal{
