--- a/app/src/js/app/shared/views/navbar.html
+++ b/app/src/js/app/shared/views/navbar.html
@@ -41,26 +41,71 @@
             <b></b> -->
             <i class="ri-briefcase-line"></i> <span ng-show="!thisHide">{{ 'navigation.projects' | translate }}</span>
         </a>
-        <a href="#" ng-if="userRole != 'clients'" class="lexart-menu__nav-item" ui-sref-active="lexart-menu__nav-item--selected" ui-sref="app.dashboardTasks">
+        <div ng-if="userRole != 'clients'" class="lexart-menu__nav-item" ui-sref-active="lexart-menu__nav-item--selected">
             <!-- <b></b>
             <b></b> -->
             <i class="ri-task-line"></i> <span ng-show="!thisHide">{{ 'navigation.tasks' | translate }}</span>
-        </a>
+            <div class="lexart-hover_menu">
+                <div class="lexart-hover_menu-item">
+                    <a ui-sref="app.tasks"><span>{{ 'Tareas Manuales' }}</span></a>
+                </div>
+                <div class="lexart-hover_menu-item">
+                    <a ui-sref="app.tasks_automatic"><span>{{ 'navigation.tasks_automatic' | translate }}</span></a>
+                </div>
+                <div class="lexart-hover_menu-item">
+                    <a ui-sref="app.tasks_trello"><span>{{ 'navigation.tasks_trello' | translate }}</span></a>
+                </div>
+                <div class="lexart-hover_menu-item">
+                    <a ui-sref="app.jira"><span>{{ 'navigation.jira' | translate }}</span></a>
+                </div>
+                <div class="lexart-hover_menu-item">
+                    <a ui-sref="app.taskManager"><span>{{ 'navigation.taskManager' | translate }}</span></a>
+                </div>
+            </div>
+        </div>
         <a  href="#" class="lexart-menu__nav-item" ui-sref-active="lexart-menu__nav-item--selected" ui-sref="app.reports">
             <!-- <b></b>
             <b></b> -->
             <i class="ri-bar-chart-line"></i> <span ng-show="!thisHide">{{ 'Reportes' }}</span>
         </a>
-        <a ng-if="isAdmin == 'true'"  href="#" class="lexart-menu__nav-item" ui-sref-active="lexart-menu__nav-item--selected" ui-sref="app.CRM">
+        <div ng-if="isAdmin == 'true'"  href="#" class="lexart-menu__nav-item" ui-sref-active="lexart-menu__nav-item--selected">
             <!-- <b></b>
             <b></b> -->
             <i class="ri-folder-open-line"></i> <span ng-show="!thisHide">{{ 'CRM'}}</span>
-        </a>
-        <a ng-if="isAdmin == 'true'"  href="#" class="lexart-menu__nav-item" ui-sref-active="lexart-menu__nav-item--selected" ui-sref="app.apps">
+            <div class="lexart-hover_menu">
+                <div class="lexart-hover_menu-item">
+                    <a ui-sref="app.banks"><span>{{ 'navigation.bank' | translate }}</span></a>
+                </div>
+                <div class="lexart-hover_menu-item">
+                    <a ui-sref="app.finances"><span>{{ 'navigation.finance' | translate }}</span></a>
+                </div>
+                <div class="lexart-hover_menu-item">
+                    <a ui-sref="app.sales"><span>{{ 'navigation.sale' | translate }}</span></a>
+                </div>
+                <div class="lexart-hover_menu-item">
+                    <a ui-sref="app.weeklyHours"><span>{{ 'navigation.weeklyHour' | translate }}</span></a>
+                </div>
+                <div class="lexart-hover_menu-item">
+                    <a ui-sref="app.reports"><span>{{ 'Reportes' }}</span></a>
+                </div>
+                <div class="lexart-hover_menu-item">
+                    <a ui-sref="app.evaluate"><span>{{ 'Evaluaciones' }}</span></a>
+                </div>
+            </div>
+        </div>
+        <div ng-if="isAdmin == 'true'"  href="#" class="lexart-menu__nav-item" ui-sref-active="lexart-menu__nav-item--selected">
             <!-- <b></b>
             <b></b> -->
             <i class="ri-google-play-line"></i> <span ng-show="!thisHide">{{ 'APP’s'}}</span>
-        </a>
+            <div class="lexart-hover_menu">
+                <div class="lexart-hover_menu-item">
+                    <a ui-sref="app.easyWebs"><span>{{ 'Easy Webs' }}</span></a>
+                </div>
+                <div class="lexart-hover_menu-item">
+                    <a ui-sref="app.hosting"><span>{{ 'Hosting' }}</span></a>
+                </div>
+            </div>
+            </div>
 
         
 
