--- a/app/src/less/custom.less
+++ b/app/src/less/custom.less
@@ -1296,3 +1296,27 @@ body {
     user-select: none;
     border-radius: 5px;
 }
+
+.lexart-menu__nav-item:hover .lexart-hover_menu{
+    display: inline-block;
+}
+.lexart-hover_menu:hover{
+    display: inline-block;
+}
+.lexart-hover_menu{
+    display: none;
+    position: absolute;
+    left: 100%;
+    top: -9px;
+    background-color: transparent;
+    border: 0px;
+    min-width: 200px;
+    padding: 0px 0px 10px 16px;
+}
+.lexart-hover_menu-item{
+    padding: 10px 20px 10px 10px;
+    background-color: #f9f9f9;
+}
+.lexart-hover_menu-item:hover{
+    color: @color-active-text;
+}
