--- a/app/src/less/nav.less
+++ b/app/src/less/nav.less
@@ -1,7 +1,7 @@
 .lexart-menu {
   background: @color-bk-dark-mode;
   width: @navbar-width;
-  overflow: hidden;
+  overflow: visible;
   position: relative;
   z-index: 99;
   display: block;
@@ -13,7 +13,7 @@
     width: @navbar-width;
     height: 100%;
     height: 100vh;
-    overflow: hidden;
+    overflow: visible;
     position: fixed;
     // padding-bottom: 120px;
 
