--- a/app/src/less/custom.less
+++ b/app/src/less/custom.less
@@ -1311,7 +1311,11 @@ body {
     background-color: transparent;
     border: 0px;
     min-width: 200px;
-    padding: 0px 0px 10px 16px;
+    padding: 2px;
+    -webkit-box-shadow: 0px 0px 5px 2px rgba(194, 194, 194, 1);
+    -moz-box-shadow: 0px 0px 5px 2px rgba(194, 194, 194, 1);
+    box-shadow: 0px 0px 5px 2px rgba(194, 194, 194, 1);
+    border-radius: 5px;
 }
 .lexart-hover_menu-item{
     padding: 10px 20px 10px 10px;
