--- a/app/src/js/app/shared/views/navbar.html
+++ b/app/src/js/app/shared/views/navbar.html
@@ -123,10 +123,10 @@
                     <i class="ri-moon-line"></i>
                     <div class="circle"></div>
             </label>
-            <span ng-show="shohSwitchTooltip" class="tooltip-box-switch" ng-mouseleave="shohSwitchTooltip = false; ">
+            <!-- <span ng-show="shohSwitchTooltip" class="tooltip-box-switch" ng-mouseleave="shohSwitchTooltip = false; ">
                 Nueva funcionalidad!<br>
                 Cambia entre Light and Dark Theme!
-            </span>
+            </span> -->
         </div>
         
         
