--- a/app/src/js/app/shared/views/topbar.html
+++ b/app/src/js/app/shared/views/topbar.html
@@ -102,10 +102,10 @@
       </div>
       <!-- ng-mouseover="showTrackTooltip = true" ng-mouseleave="showTrackTooltip = false" -->
       <div class="top-bar__current_tracking_container tooltip-container">
-        <span ng-show="showTrackTooltip" class="tooltip-box" ng-mouseleave="showTrackTooltip = false; " >
+        <!-- <span ng-show="showTrackTooltip" class="tooltip-box" ng-mouseleave="showTrackTooltip = false; " >
           Ahora trackear es mas sencillo<br>
           Solo busca la tarea y dale play!
-        </span>
+        </span> -->
         <!-- <p ng-show="timerRunning">
             <label title="{{currentTrack.projectName + ' - ' + currentTrack.taskName}}">{{currentTrack.projectName + ' - ' + currentTrack.taskName | truncateTail:true:45:'...'}}</label>
             <label style="display: block;"><span style="vertical-align: super;">{{timer}}</span><span ng-click="stopTrack()">&nbsp;&nbsp;<img class="img_stop" src="/assets/images/stopNavBar.png"></span></label>
