--- a/app/src/less/redesign.less
+++ b/app/src/less/redesign.less
@@ -791,6 +791,11 @@ tbody {
   .lexart-hover_menu-item:hover{
     color: @color-active-text;
   }
+  .lexart-hover_menu {
+    -webkit-box-shadow: 0px 0px 5px 1px rgba(38, 38, 38, 1);
+    -moz-box-shadow: 0px 0px 5px 1px rgba(38, 38, 38, 1);
+    box-shadow: 0px 0px 5px 1px rgba(38, 18, 18, 1);
+  }
 }
 
 .project-subtotal{
