[PL-112]: feat - user photo at navbar

--- a/app/src/js/app/components/users/views/userFormView.html
+++ b/app/src/js/app/components/users/views/userFormView.html
@@ -60,13 +60,13 @@
     </div>
     <div class="lexart-frm__fld visualizer">
       <label class="lexart-frm__lbl">
-          <input type="file" file-model="imageSrc">
+          <input type="file" file-model="imageSrc" id="prof-input">
           <b class="lexart-frm__lbl-name">Imagen de perfil</b>
       </label>
-      <img ng-src="{{dataURL}}" />
-      <div ng-show="imageLoading" class="loader">
+      <img ng-show="!imageLoading" ng-src="{{imageHandler.dataURL}}" />
+      <!-- <div ng-show="imageLoading" class="loader">
         <div></div>
-      </div>
+      </div> -->
     </div>
     <div class="lexart-frm__fldgrp" ng-if="user.role=='client'">
       <div class="lexart-frm__fld">
