[pl-113]:feat - add idSlack at user form on UI

--- a/app/src/js/app/components/users/views/userFormView.html
+++ b/app/src/js/app/components/users/views/userFormView.html
@@ -57,6 +57,12 @@
           <b class="lexart-frm__lbl-name">{{'Rol'}}</b>
         </label>
       </div>
+      <div class="lexart-frm__fld">
+        <label class="lexart-frm__lbl">
+          <input type="text" ng-model="user.idSlack" />
+          <b class="lexart-frm__lbl-name">{{ 'Slack ID' }}</b>
+        </label>
+      </div>
     </div>
     <div class="lexart-frm__fld visualizer">
       <label class="lexart-frm__lbl">
