--- a/app/src/js/app/components/dashboard/views/indexView.html
+++ b/app/src/js/app/components/dashboard/views/indexView.html
@@ -82,6 +82,7 @@
         <table>
             <thead>
                 <tr>
+                    <th></th>
                     <th>{{ 'dashboard.user' | translate }}</th>
                     <th>{{ 'dashboard.project' | translate }}</th>
                     <th>{{ 'dashboard.task' | translate }}</th>
@@ -91,6 +92,10 @@
             </thead>
             <tbody>
                 <tr ng-repeat="track in tracks" ng-if="!track.endTime || track.endTime == '0000-00-00 00:00:00'">
+                    <td>
+                        <img ng-if="track.photo" ng-src="{{ FILES_BASE+track.photo }}" alt="profile picture" class="usr-photo-table"></img>
+                        <img ng-if="!track.photo" src="/assets/images/user-placeholder.png" alt="profile picture" class="usr-photo-table">
+                    </td>
                     <td>{{track.userName}}</td>
                     <td><a ng-if="userRole == 'admin' || userRole == 'pm'"  style="color: #4a90e2; text-decoration: underline" ui-sref="app.projectEdit({id: track.idProyecto})" target="_blank">{{track.projectName | truncateTail:true:30:'...'}}</a></td>
                     <td ng-if="userRole != 'admin'">{{track.projectName}}</td>
