--- a/app/src/js/app/components/users/views/usersView.html
+++ b/app/src/js/app/components/users/views/usersView.html
@@ -32,9 +32,9 @@
                 <td></td>
             </tr>
             <tr ng-repeat="user in users | filter: filter">
-                <td>
-                    <img ng-if="user.photo" ng-src="{{ FILES_BASE+user.photo }}" alt="profile picture" class="usr-photo"></img>
-                    <img ng-if="!user.photo" src="/assets/images/user-placeholder.png" alt="profile picture" class="usr-photo">
+                <td style="position:relative;">
+                    <img ng-if="user.photo" ng-src="{{ FILES_BASE+user.photo }}" alt="profile picture" class="usr-photo-table"></img>
+                    <img ng-if="!user.photo" src="/assets/images/user-placeholder.png" alt="profile picture" class="usr-photo-table">
                 </td>
                 <td>{{user.id}}</td>
                 <td><a ng-if="userRole == 'admin'" style="color: #4a90e2; text-decoration: underline" ui-sref="app.tasks-user({id: user.id})" >{{user.name | truncateTail:true:30:'...'}}</a></td>
