--- a/app/src/less/top-bar.less
+++ b/app/src/less/top-bar.less
@@ -54,14 +54,18 @@ a {
   text-decoration: none;
 }
 
+
 .container {
   width: 1170px;
   position: relative;
-  // margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-  // padding: 1rem;
+
+  // display: flex;
+  // justify-content: space-between;
+  // flex-wrap: nowrap;
+  // gap: 1rem;
 }
 
 // Start navbar
@@ -75,7 +79,7 @@ a {
   // justify-content: space-between;
   width: 100%;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   align-items: center;
   justify-content: space-between;
   position: fixed;
@@ -172,7 +176,7 @@ a {
     display: flex;
     align-items: center;
     flex-basis: auto;
-    flex-grow: 1;
+    flex-grow: 0;
     
 
     @media (max-width: 768px) {
@@ -182,12 +186,12 @@ a {
 
     // Ul
     .navbar-nav {
-      margin-left: auto;
+      // margin-left: auto;
       // margin-right: 70px;
       flex-direction: row;
       display: flex;
       padding-left: 0;
-      margin-bottom: 0;
+      // margin-bottom: 0;
       list-style: none;
 
       @media (max-width: 768px) {
@@ -203,6 +207,10 @@ a {
           text-decoration: none;
           display: inline-block;
           padding: @navbar-link-padding-y @navbar-link-padding-x;
+
+          white-space: nowrap; 
+          overflow: hidden;
+          text-overflow: ellipsis;
 
           &:hover {
             color: @navbar-link-hover;
