--- a/application/app/src/less/custom.less
+++ b/application/app/src/less/custom.less
@@ -68,6 +68,11 @@
     margin-right: 20px;
 }
 
+.lexart-btn__flex-right {
+    display: flex;
+    justify-content: end;
+}
+
 .lexart-cstm__grid-5 {
     width: 5%;
 }
@@ -1334,4 +1339,8 @@ body {
     border-radius: 50%;
     left: 40%;
     top: 3px;
+}
+
+.lexart-remove-button {
+    color: @color-red;
 }
