--- a/application/app/src/less/tables.less
+++ b/application/app/src/less/tables.less
@@ -212,6 +212,13 @@ td {
   text-decoration: underline;
 }
 
+.lexart-table__action-cell {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  font-size: 1.25rem;
+}
+
 .lexart-th__radio {
   width: 20px;
 }
